fix home image on mobile

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -118,8 +118,8 @@ input
     font-size: 0
   img
     filter: saturate(0)
-    max-width: 80%
-    max-height: 80%
+    max-width: 80vw
+    max-height: 80vh
     width: auto
     height: auto
 
